Update style.scss  - Fix layout bug

--- a/css/style.scss
+++ b/css/style.scss
@@ -54,7 +54,7 @@ html, body{
 			"eng  ja  "
 			"key  key";
 		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 42px 1fr 300px;
+		grid-template-rows: 42px 1fr 1fr 250px;
 		gap: 8px;
 		padding: 16px;
 		& > *:not(.keyboard):not(.cont){
